--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + Preact</title>
+    <title>JS-Interview</title>
     <script type="module" crossorigin src="/assets/main.js"></script>
     <link rel="stylesheet" href="/assets/main.css">
   </head>
@@ -13,11 +13,11 @@
     
   
   <script>
-	  // if ('serviceWorker' in navigator) {
-		//   navigator.serviceWorker.register('/sw.js')
-		// 	  .then(reg => console.log('service worker registered'))
-		// 	  .catch(err => console.log('service worker not registered', err));
-	  // }
+	  if ('serviceWorker' in navigator) {
+		  navigator.serviceWorker.register('/sw.js')
+			  .then(reg => console.log('service worker registered'))
+			  .catch(err => console.log('service worker not registered', err));
+	  }
 	  
   </script>
   </body>
